Code clean-up, additional documentation

--- a/fresh_tomatoes.html
+++ b/fresh_tomatoes.html
@@ -105,52 +105,52 @@
     <div class="container">
       
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="5YaLbyXh59A" data-toggle="modal" data-target="#trailer">
-    <img src="http://www.suggestmemovie.com/fotolar2/14126885131152669056.jpg" width="220" height="342">
+    <img src="https://goo.gl/KFpvUo" width="220" height="342">
     <h2>Casualties of War (1989)</h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="__PnD1HWXSo" data-toggle="modal" data-target="#trailer">
-    <img src="http://www.suggestmemovie.com/fotolar/1296323193171865407.jpg" width="220" height="342">
+    <img src="https://goo.gl/jy732j" width="220" height="342">
     <h2>Kiss Kiss Bang Bang (2005)</h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="sY1S34973zA" data-toggle="modal" data-target="#trailer">
-    <img src="https://images-na.ssl-images-amazon.com/images/M/MV5BZTRmNjQ1ZDYtNDgzMy00OGE0LWE4N2YtNTkzNWQ5ZDhlNGJmL2ltYWdlL2ltYWdlXkEyXkFqcGdeQXVyNjU0OTQ0OTY@._V1_QL50_SY1000_CR0,0,704,1000_AL_.jpg" width="220" height="342">
+    <img src="https://goo.gl/GW5OeF" width="220" height="342">
     <h2>The Godfather (1972)</h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="cMfeWyVBidk" data-toggle="modal" data-target="#trailer">
-    <img src="https://upload.wikimedia.org/wikipedia/en/3/3c/Ice_Age_%282002_film%29_poster.jpg" width="220" height="342">
+    <img src="https://goo.gl/xfAHyk" width="220" height="342">
     <h2>Ice Age (2002)</h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="6a0-dSMWm5g" data-toggle="modal" data-target="#trailer">
-    <img src="http://www.suggestmemovie.com/fotolar/1340968445715474218.jpg" width="220" height="342">
+    <img src="https://goo.gl/AjZwW2" width="220" height="342">
     <h2>Chak De India! (2007)</h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="K_tLp7T6U1c" data-toggle="modal" data-target="#trailer">
-    <img src="http://www.suggestmemovie.com/fotolar/12963093141508567041.jpg" width="220" height="342">
+    <img src="http://bit.ly/2soSl4i" width="220" height="342">
     <h2>The Shawshank Redemption (1994)</h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="gLpZ_5bHmo8" data-toggle="modal" data-target="#trailer">
-    <img src="http://www.suggestmemovie.com/fotolar/1315469934430905131.jpg" width="220" height="342">
+    <img src="http://bit.ly/2soRhxe" width="220" height="342">
     <h2>Crouching Tiger, Hidden Dragon (2000)</h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="4O-sMh_DO6I" data-toggle="modal" data-target="#trailer">
-    <img src="http://www.suggestmemovie.com/fotolar/1296323989194981211.jpg" width="220" height="342">
+    <img src="http://bit.ly/2sp5avw" width="220" height="342">
     <h2>Enemy at the Gates (2001)</h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="L7tWNwhSocE" data-toggle="modal" data-target="#trailer">
-    <img src="https://images-na.ssl-images-amazon.com/images/M/MV5BMTM1NDc5MDYxMl5BMl5BanBnXkFtZTcwMjMzNDAzMQ@@._V1_QL50_SY1000_CR0,0,675,1000_AL_.jpg" width="220" height="342">
+    <img src="http://bit.ly/2sp2E8b" width="220" height="342">
     <h2>March of the Penguins (2005)</h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="AL2TShb6fFs" data-toggle="modal" data-target="#trailer">
-    <img src="http://www.suggestmemovie.com/fotolar4/14837116191793903737.jpg" width="220" height="342">
+    <img src="http://bit.ly/2soQnAO" width="220" height="342">
     <h2>Pink (2016)</h2>
 </div>
 
